fixed some of the styling in checkout and fixed the user image not showing

--- a/src/component/Rating/review.css
+++ b/src/component/Rating/review.css
@@ -4,7 +4,7 @@
 }
 
 .user-review-image{
-    border-radius: 50%;
+    border-radius: 3px;
     width: 40px;
     height: 40px;
 }
